<resources>
    <string name="app_name">J101418</string>
    <string name="please_select_if_you_want_a_random_advice_or_you_want_to_look_one_by_id">Please select if you want a random advice or you want to look one by id</string>
    <string name="go">GO</string>
    <string name="please_select_if_you_want_a_random_piece_of_advice_or_a_random_quote_from_a_famous_personality">Please select if you want a random piece of advice or a random quote from a famous personality</string>
    <string name="back">Back</string>
    <string name="first_word_of_the_dummy">first word of the dummy</string>
    <string name="whole_dummy_text">whole dummy text</string>
    <string name="advice_area">advice area</string>
    <string name="first_word_of_the_advice">first word of the advice</string>
    <string name="whole_quote_area">whole quote area</string>
    <string name="author">author</string>
    <string name="random_wisdom">RANDOM WISDOM</string>
    <string name="random_advice">Random ADVICE</string>
    <string name="random_quote">Random QUOTE</string>
    <string name="press_the_button_if_you_want_to_read_more_quotes_from">Press the button if you want to read more quotes from</string>
    <string name="textview">TextView</string>
    <string name="get_quotes">Get Quotes</string>
    <string name="number_of_quotes">number of quotes</string>
    <string name="single_quote">single quote</string>
    <string name="number_of_quotes_by_author">Number of Quotes</string>
    <string name="get_bonus">Get bonus</string>
    <string name="home">Home</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_fragment_quote_to_advice">hello fragment Quote to Advice</string>
    <string name="number_of_advices">Number of advices</string>
    <string name="single_advice">single advice</string>
    <string name="btnHome">Home</string>
</resources>